# monotonic_align

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
monotonic_align/: __init__.py  core.pyx  core1alt.pyx  core2.pyx  core2eps.pyx  core_my.pyx  mas.py
tests/: test_max_path.py
